--- a/Reponsividade/css.css
+++ b/Reponsividade/css.css
@@ -11,11 +11,22 @@
     background-color: var(--bg-mainTxt);
 }
 
+/* grid para container geral */
+.container {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr); 
+    grid-template-rows: 150px 100px 1fr 150px;
+    grid-gap: 20px; 
+    padding: 20px;
+}
+/* grid pra ate 800px */
 @media (max-width: 800px) {
-    .viewport {
-        grid-template-columns: 1fr;
-        gap: 1em;
-        padding: 1em 0.5em;
+    .container {
+        display: grid;
+        grid-template-columns: 1fr; /* 1 coluna ocupando todo espaço */
+        grid-template-rows: 140px 350px 1fr 200px; /* ajuste os valores conforme desejar */
+        grid-gap: 10px;
+        padding: 10px;
     }
     .header .dados_pessoais {
         flex-direction: column;
@@ -31,13 +42,17 @@
         margin-top: 6em;
     }
 }
+/* grid pra ate 600px */
 @media (max-width: 600px) {
-    .viewport {
-        padding: 0.5em 0.2em;
-        gap: 1em;
+    .container {
+        display: grid;
+        grid-template-columns: 1fr; 
+        grid-template-rows: 90px 500px 1fr 200px; 
+        grid-gap: 5px;
+        padding: 5px;
     }
     #Curriculo, h2 {
-        font-size: 2.2rem;
+        font-size: 3rem;
         padding: 0.5em;
     }
     .profile {
@@ -162,7 +177,6 @@ html {
 .header{
     display: flex;
 }
-/* informações pessoais */
 .pessoal {
     font-size: var(--Medium);
     display: flex;
