--- a/Reponsividade/css.css
+++ b/Reponsividade/css.css
@@ -23,8 +23,8 @@
 @media (max-width: 800px) {
     .container {
         display: grid;
-        grid-template-columns: 1fr; /* 1 coluna ocupando todo espaço */
-        grid-template-rows: 140px 350px 1fr 200px; /* ajuste os valores conforme desejar */
+        grid-template-columns: 1fr; 
+        grid-template-rows: 140px 350px 1fr 200px; 
         grid-gap: 10px;
         padding: 10px;
     }
